--- a/Apps/APN-UIKit/APN UIKit/Base.lproj/Main.storyboard
+++ b/Apps/APN-UIKit/APN UIKit/Base.lproj/Main.storyboard
@@ -152,13 +152,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What would you like to test?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gm6-Cg-tg6">
-                                <rect key="frame" x="10" y="143.66666666666666" width="394" height="27.333333333333343"/>
+                                <rect key="frame" x="10" y="110.66666666666667" width="394" height="27.333333333333329"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                 <color key="textColor" red="0.24313725489999999" green="0.24313725489999999" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="AIH-WX-Xne">
-                                <rect key="frame" x="20" y="211" width="374" height="314"/>
+                                <rect key="frame" x="20" y="178" width="374" height="380"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yOE-0O-ICW" customClass="ThemeButton" customModule="APN_UIKit" customModuleProvider="target">
                                         <rect key="frame" x="94.666666666666686" y="0.0" width="185" height="50"/>
@@ -213,8 +213,21 @@
                                             <action selector="setProfileAttributes:" destination="0ax-47-4zI" eventType="touchUpInside" id="PIF-Uh-xKS"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XDM-Yu-1Sg" customClass="ThemeButton" customModule="APN_UIKit" customModuleProvider="target">
+                                        <rect key="frame" x="94.666666666666686" y="272" width="185" height="34.333333333333314"/>
+                                        <color key="backgroundColor" red="0.23529411759999999" green="0.26274509800000001" blue="0.49019607840000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="185" id="2yp-YY-fxM"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Show Push Prompt"/>
+                                        <connections>
+                                            <action selector="showPushPrompt:" destination="0ax-47-4zI" eventType="touchUpInside" id="Snq-qE-ynP"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSy-pH-Zuu" customClass="ThemeButton" customModule="APN_UIKit" customModuleProvider="target">
-                                        <rect key="frame" x="94.666666666666686" y="264" width="185" height="50"/>
+                                        <rect key="frame" x="94.666666666666686" y="330" width="185" height="50"/>
                                         <color key="backgroundColor" red="0.23529411759999999" green="0.26274509800000001" blue="0.49019607840000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="185" id="uv2-HN-pr3"/>
@@ -241,18 +254,16 @@
                                     <constraint firstAttribute="width" constant="50" id="eza-2G-gKT"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usericon" translatesAutoresizingMaskIntoConstraints="NO" id="tbS-YB-vPe">
-                                <rect key="frame" x="20" y="40" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="p65-fT-na9"/>
-                                    <constraint firstAttribute="height" constant="50" id="qGy-1y-8fc"/>
-                                </constraints>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What would you like to test?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mIk-22-9js">
+                                <rect key="frame" x="10" y="88.666666666666671" width="394" height="22"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
+                                <color key="textColor" red="0.24313725489999999" green="0.24313725489999999" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="QCK-Bh-SyG"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="tbS-YB-vPe" firstAttribute="centerY" secondItem="Kn0-pQ-K5D" secondAttribute="centerY" id="57j-ra-tQH"/>
                             <constraint firstItem="gm6-Cg-tg6" firstAttribute="leading" secondItem="QCK-Bh-SyG" secondAttribute="leading" constant="10" id="9XZ-N2-MTn"/>
                             <constraint firstItem="Kn0-pQ-K5D" firstAttribute="top" secondItem="QCK-Bh-SyG" secondAttribute="top" constant="20" id="Axs-iq-bOs"/>
                             <constraint firstItem="QCK-Bh-SyG" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gm6-Cg-tg6" secondAttribute="trailing" id="B9V-Qh-5ZD"/>
@@ -260,8 +271,11 @@
                             <constraint firstItem="QCK-Bh-SyG" firstAttribute="trailing" secondItem="Kn0-pQ-K5D" secondAttribute="trailing" constant="20" id="CpS-M0-Pil"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="centerX" secondItem="LR0-48-7RQ" secondAttribute="centerX" id="Df6-LA-cyo"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="centerY" secondItem="LR0-48-7RQ" secondAttribute="centerY" id="FYN-MZ-pSL"/>
+                            <constraint firstItem="mIk-22-9js" firstAttribute="trailing" secondItem="gm6-Cg-tg6" secondAttribute="trailing" id="MML-h7-DlV"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="leading" secondItem="QCK-Bh-SyG" secondAttribute="leading" constant="20" id="T5c-wP-91S"/>
-                            <constraint firstItem="tbS-YB-vPe" firstAttribute="leading" secondItem="QCK-Bh-SyG" secondAttribute="leading" constant="20" id="r1a-xD-7l0"/>
+                            <constraint firstItem="mIk-22-9js" firstAttribute="leading" secondItem="gm6-Cg-tg6" secondAttribute="leading" id="UGy-y5-Bdk"/>
+                            <constraint firstItem="gm6-Cg-tg6" firstAttribute="top" secondItem="mIk-22-9js" secondAttribute="bottom" id="WM2-Ba-Zhg"/>
+                            <constraint firstItem="mIk-22-9js" firstAttribute="centerX" secondItem="gm6-Cg-tg6" secondAttribute="centerX" id="dxZ-Al-OjG"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="top" secondItem="gm6-Cg-tg6" secondAttribute="bottom" constant="40" id="rcs-MH-dX9"/>
                             <constraint firstItem="gm6-Cg-tg6" firstAttribute="centerX" secondItem="LR0-48-7RQ" secondAttribute="centerX" id="sj0-My-pz5"/>
                         </constraints>
@@ -269,7 +283,7 @@
                     <navigationItem key="navigationItem" id="lSD-LL-pFO"/>
                     <connections>
                         <outlet property="settings" destination="Kn0-pQ-K5D" id="0cy-hk-K6x"/>
-                        <outlet property="userDetail" destination="tbS-YB-vPe" id="Vhd-s1-uLc"/>
+                        <outlet property="userInfoLabel" destination="mIk-22-9js" id="deL-cg-q6O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7l8-Yk-uny" sceneMemberID="firstResponder"/>
@@ -791,7 +805,6 @@
     <resources>
         <image name="copy" width="512" height="512"/>
         <image name="settings" width="512" height="512"/>
-        <image name="usericon" width="128" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
